syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.dshaplov.university";
package ru.dshaplov.university;

service MessageService {
  rpc LogMessage (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
  string message = 1;
}

message MessageResponse {

}